// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div
  className="absolute top-0 bottom-0 right-0"
/>
`;

exports[`should render 2`] = `
Array [
  <div
    className="absolute top-0 bottom-0 right-0"
  />,
  <div>
    Sidebar
  </div>,
]
`;
